[workspace]
members = [".", "crates/*"]
default-members = ["."]
resolver = "2"

[lib]
name = "tcp_over_ws"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "ws_to_tcp"
path = "src/main.rs"

[package]
name = "tcp_over_ws"
version = "1.0.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8" }
futures = { version = "0" }
tokio = { version = "1", features = ["signal", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["io"] }

either = { version = "1" }
url = { version = "*" }
async-tungstenite = { version = "0.29", features = ["tokio-runtime", "async-tls"]}
async-tls = { version = "*" }
#tungstenite = { version = "0.26" }
serviceator = { path = "crates/serviceator" }
clap = { version = "4.5.26", features = ["derive"] }
arc-swap = { version = "1" }
rand = "0.9.0"
# http-body = "1"
# hyper = { version = "1.3.1", features = ["http1", "http2", "server"] }
# hyper-util = { version = "0.1.3", features = ["server-auto", "tokio"] }
# hyper-tungstenite = { version = "^0.17" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"
